chore: minor conventional changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,21 +19,21 @@
             Learn more
         </a>
     </header>
-    <div class="jumbotron text-info" style='background-color: #22262a; padding-top: 36px;'>
-        <ul class="list-unstyled">
-            <li style="margin-bottom: 16px; font-size: 21px;">It's usable on the Facebook Page -
-                <a class="badge badge-info" href="https://www.facebook.com/Resume-Builder-Bot-622691505043730/">
+    <div class='jumbotron text-info' style='background-color: #22262a; padding-top: 36px;'>
+        <ul class='list-unstyled'>
+            <li style='margin-bottom: 16px; font-size: 21px;'>It's usable on the Facebook Page -
+                <a class='badge badge-info' href='https://www.facebook.com/Resume-Builder-Bot-622691505043730/'>
                     Resume Builder Bot
                 </a>
             </li>
-            <li style="margin-bottom: 16px; font-size: 21px;">GitHub Link -
-                <a class="badge badge-info" href="https://github.com/Mayank0255/Resume-Bot">
+            <li style='margin-bottom: 16px; font-size: 21px;'>GitHub Link -
+                <a class='badge badge-info' href='https://github.com/Mayank0255/Resume-Bot'>
                     Click Here
                 </a>
             </li>
-            <li style="margin-bottom: 16px; font-size: 21px;">
+            <li style='margin-bottom: 16px; font-size: 21px;'>
                 Watch the demo video
-                <a class="badge badge-info" href="https://github.com/Mayank0255/Resume-Bot">
+                <a class='badge badge-info' href='https://github.com/Mayank0255/Resume-Bot'>
                     Click Here
                 </a>
             </li>
