chore: setup sample template

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,18 +22,18 @@
     <div class='jumbotron text-info' style='background-color: #22262a; padding-top: 36px;'>
         <ul class='list-unstyled'>
             <li style='margin-bottom: 16px; font-size: 21px;'>It's usable on the Facebook Page -
-                <a class='badge badge-info' href='https://www.facebook.com/Resume-Builder-Bot-622691505043730/'>
+                <a class='badge badge-info' href='https://www.facebook.com/Resume-Builder-Bot-622691505043730/' target='_blank'>
                     Resume Builder Bot
                 </a>
             </li>
             <li style='margin-bottom: 16px; font-size: 21px;'>GitHub Link -
-                <a class='badge badge-info' href='https://github.com/Mayank0255/Resume-Bot'>
+                <a class='badge badge-info' href='https://github.com/Mayank0255/Resume-Bot' target='_blank'>
                     Click Here
                 </a>
             </li>
             <li style='margin-bottom: 16px; font-size: 21px;'>
                 Watch the demo video
-                <a class='badge badge-info' href='https://github.com/Mayank0255/Resume-Bot'>
+                <a class='badge badge-info' href='https://github.com/Mayank0255/Resume-Bot' target='_blank'>
                     Click Here
                 </a>
             </li>
