chore: ui redesign

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,8 @@
 <html lang='en' dir='ltr'>
 <head>
     <meta charset='utf-8'>
-    <title></title>
+    <title>Resume Bot</title>
+    <link rel="shortcut icon" href="/images/icon.jpg" type="image/x-icon">
     <link
             rel='stylesheet'
             href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css'
